--- a/style/news/news.css
+++ b/style/news/news.css
@@ -1,84 +1,102 @@
-#news{
+#news {
     display: none;
     width: 100%;
+    min-height: 500px;
     background-color: #202020;
 }
-.news_container{
+
+.news_container {
     width: 100%;
 }
-.news_info{
+
+.news_info {
     width: 1000px;
     min-height: 300px;
-    margin: 60px auto 0px auto;
+    margin: auto;
 }
-.news_left{
+
+.news_left {
     float: left;
     width: 300px;
     margin-right: 10px;
 }
-.news_right{
+
+.news_right {
     float: left;
     width: 690px;
 }
-.page_link_container{
+
+.page_link_container {
     border: 1px solid #2b2b2b;
     height: 100px;
     width: 100%;
 }
-.left_container_title{
+
+.left_container_title {
     height: 30px;
     line-height: 30px;
     border-bottom: 1px solid #000;
     padding: 0px 10px;
 }
-.left_container_content{
+
+.left_container_content {
     padding: 0px 10px;
     min-height: 50px;
 }
-.pic,.video{
+
+.pic, .video {
     padding: 10px 0px;
 }
 
-.bg_color_2b{
+.bg_color_2b {
     background-color: #2b2b2b;
     color: #ddd;
 }
-.blank_15px{
+
+.blank_15px {
     width: 100%;
     height: 5px;
 }
-.active_off{
+
+.active_off {
     color: #666;
     cursor: none;
 }
-.active_on{
+
+.active_on {
     cursor: pointer;
 }
 
-.list_container .list_item{
+.list_container .list_item {
     border-bottom: 1px solid #000;
     background-color: #2b2b2b;
     padding: 0px 15px;
 }
-.list_container .title{
+
+.list_container .title {
     height: 40px;
     line-height: 40px;
     color: #ddd;
 }
-.list_container .item_time{
+
+.list_container .item_time {
 
 }
-.list_container .item_count{
+
+.list_container .item_count {
     cursor: pointer;
 }
-.list_container .item_detail{
+
+.list_container .item_detail {
     color: #666;
     font-size: 12px;
 }
-.item_media{
+
+.item_media {
     padding: 10px 0px;
 }
-.big_pic{
+
+.big_pic {
     display: inline-block;
     margin: 0px 5px 5px 5px;
     height: 150px;
@@ -106,9 +124,11 @@
     -o-background-repeat: no-repeat;
     -o-background-position: center center;
 }
-.small_pic{
+
+.small_pic {
     float: left;
     margin: 0px 1px 1px 0px;
+    border: 1px solid transparent;
     height: 69px;
     width: 69px;
     background-color: transparent;
@@ -133,39 +153,171 @@
     -o-background-repeat: no-repeat;
     -o-background-position: center center;
 }
-.play_class{
+
+.small_pic:hover {
+    border: 1px solid #fff;
+}
+
+.small_video {
+    float: left;
+    margin: 0px 1px 1px 0px;
+    height: 69px;
+    width: 139px;
+    background-color: transparent;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    -moz-background-size: cover;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+
+    -ms-background-size: cover;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+
+    -webkit-background-size: cover;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+
+    -o-background-size: cover;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
+}
+
+.play_class {
     width: 100%;
-    background-color: rgba(0,0,0,.2);
-    color: #fff;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, .2);
+    color: #ccc;
     font-size: 20px;
     text-align: center;
 }
-.play_circle{
+
+.play_circle {
     display: inline-block;
     width: 50px;
     height: 50px;
     line-height: 46px;
-    border: 2px solid #fff;
+    border: 2px solid #ccc;
     border-radius: 50%;
     text-align: center;
     cursor: pointer;
 }
-.small_play_class{
+
+.small_play_class {
     width: 100%;
     height: 100%;
     line-height: 70px;
-    background-color: rgba(0,0,0,.2);
-    color: #fff;
+    background-color: rgba(0, 0, 0, .2);
+    color: #ccc;
     font-size: 14px;
     text-align: center;
 }
-.small_play_circle{
+
+.small_play_circle {
     display: inline-block;
     width: 30px;
     height: 30px;
     line-height: 30px;
-    border: 2px solid #fff;
+    border: 2px solid #ccc;
     border-radius: 50%;
     text-align: center;
     cursor: pointer;
+}
+
+.play_class:hover {
+    color: #fff;
+}
+
+.play_circle:hover {
+    border: 2px solid #fff;
+}
+
+.small_play_class:hover {
+    color: #fff;
+}
+
+.small_play_circle:hover {
+    border: 2px solid #fff;
+}
+
+.pic_title {
+    background-color: #fff;
+    height: 30px;
+    border-radius: 5px;
+}
+
+.pic_content {
+    height: 480px;
+}
+
+.show_pic {
+    width: 100%;
+    height: 100%;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    -moz-background-size: cover;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+
+    -ms-background-size: cover;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+
+    -webkit-background-size: cover;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+
+    -o-background-size: cover;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
+}
+
+.swiper-slide {
+    width: 100%;
+    height: 100%;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    -moz-background-size: cover;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+
+    -ms-background-size: cover;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+
+    -webkit-background-size: cover;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+
+    -o-background-size: cover;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
+}
+
+.arrow_container .arrow {
+    color: #ccc;
+    cursor: pointer;
+}
+
+.arrow_container .arrow:hover {
+    color: #fff;
+}
+
+.left_arrow {
+    float: left;
+    text-align: left;
+}
+
+.right_arrow {
+    float: right;
+    text-align: right;
 }
